# Command-Lab-Official-Bot

./: .dockerignore  .gitignore  CommandLab.py  Dockerfile  FOR_DEVELOPERS.md  README.md  bot.py  config.example.json  config.json  config.py  database.py  main.py  mise.toml  pyproject.toml  requirements.txt  run.cmd  run.sh  selector_test.py  server.db  test.py  tests.py  util.py
.github/workflows/: build.yml
DiscordBot_Command_Lab_Official_Bot/: CMTK.txt  CommandLab.py
assets/: ctemplate.py
cogs/: _cautoreply.py  _cselfintroduction.py  admin.py  bump_notifications.py  cautoreply.py  cbase64.py  cbnoticetime.py  ccalculate.py  ccolor.py  ccommand.py  cdebug.py  cdice.py  cdraw.py  change_status.py  chelp.py  chelpall_cping.py  cintro.py  citem.py  citemcount.py  ckill.py  ckomakenlevel.py  ckomlv_com.py  cmanifest.py  cmee6level.py  cnews.py  comikuzi.py  core_gacha.py  core_gacha_old.py  cpackmcmeta.py  cpoll.py  cpresent.py  cradix.py  crandom.py  crole.py  crole_notice.py  croll.py  cselfintroduction.py  cserver.py  ctellraw.py  ctemperature.py  (+15 more)
config/: config.example.json  config.py
data/: commands.json  json_chelp_command.json  json_ore_gacha.json  logging.yaml  pack_versions.json
lib/commands/: __init__.py  argument_type.py  argument_type.py.unuse  blockstate.py  builtin_exceptions.py  components.py  context.py  damage.py  dispatcher.py  entity.py  exceptions.py  featureset.py  item.py  loader.py  number_range.py  output.py  parse_result.py  parsed_argument.py  player.py  range.py  reader.py  redirect.py  registry.py  selector.py  server.py  source.py  suggestions.py  text.py  util.py  world.py
lib/commands/builder/: argument.py  literal.py  required_argument.py
lib/commands/component/: changes.py  type.py
lib/commands/nbt/: __init__.py  scanner.py
lib/commands/nodes/: __init__.py  argument.py  literal.py  parsed_commad_node.py  (+1 more)
lib/math/: __init__.py  axisangle4.py
lib/serialization/: builder.py  codec.py  compressor.py  data_result.py  decoder.py  dynamic.py  encoder.py  keyable.py  lifecycle.py  maplike.py  ops.py
lib/util/: __init__.py  __main__.py  collection.py  data.py  decorators.py  exceptions.py  function.py  iterator.py  number.py  optional.py  pair.py  spliterator.py  stream.py  strutil.py  system.py
schemas/: data.py  game_package.py  patch_note.py  version_manifest.py
src/command_lab_official_bot/: __init__.py
tmp/: bump_data.json
utils/: guards.py  paginator.py  setup.py  util.py
(+65 files in other folders)
