[project]
name = "command-lab-official-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "audioop-lts>=0.2.2",
    "brigadier-py>=1.1.0",
    "discord>=2.3.2",
    "googletrans>=4.0.2",
    "jishaku>=2.6.0",
    "lorem>=0.1.1",
    "markdownify>=1.2.0",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pygit2>=1.18.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "ruff>=0.12.10",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
]

[tool.ruff.lint]
select = ["E", "W", "I"]
ignore = ["E501"]