[project]
name = "command-lab-official-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "audioop-lts>=0.2.2",
    "brigadier-py>=1.1.0",
    "discord>=2.3.2",
    "googletrans>=4.0.2",
    "jishaku>=2.6.3",
    "lorem>=0.1.1",
    "markdownify>=1.2.0",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "pygit2>=1.19.0",
    "pyperclip>=1.11.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[tool.ruff]
select = ["E", "W", "I"]
ignore = ["E501"]
line-length = 200
